feat: add base templates

--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends '../base/base.html' %}
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
+{% block content %}
 
-    <body>
-        BLOG HOME
-    </body>
+<div style='height:200vh;'>Home</div>
 
-</html>
+{% endblock content %}
