--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -1,7 +1,21 @@
 {% extends '../base/base.html' %}
+{% load static %}
 
 {% block content %}
 
 <div style='height:200vh;'>Home</div>
 
 {% endblock content %}
+
+{% block scripts %}
+<script src="{% static "./scripts/toggle-nav.js" %}"></script>
+<script src="{% static "./scripts/scroll-navigation.js"%}"></script>
+<script src="{% static "./scripts/crossfade.js"%}"></script>
+<script src="{% static "./scripts/subscribe-validation.js"%}"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+        integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
+        crossorigin="anonymous"></script>
+{% endblock scripts %}
