--- a/templates/gallery/home.html
+++ b/templates/gallery/home.html
@@ -12,6 +12,24 @@
              class="screenshot">
         {% endfor %}
 
+        <div class="pagination">
+            <span class="step-links">
+                {% if imgs.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ imgs.previous_page_number }}">previous</a>
+                {% endif %}
+
+                <span class="current">
+                    Page {{ imgs.number }} of {{ imgs.paginator.num_pages }}.
+                </span>
+
+                {% if imgs.has_next %}
+                <a href="?page={{ imgs.next_page_number }}">next</a>
+                <a href="?page={{ imgs.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
+
     </div>
     <div id="myModal"
          class="modal">
