--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -10,7 +10,7 @@
 {% block scripts %}
 <script src={% static "./scripts/toggle-nav.js" %}></script>
 <script src={% static "./scripts/scroll-navigation.js" %}></script>
-<script src={% static "./scripts/crossfade.js"%}"></script>
+<script src={% static "./scripts/crossfade.js"%}></script>
 <script src={% static "./scripts/subscribe-validation.js" %}></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
