fix: basic styling

--- a/static/styles/4-layout/_gallery.scss
+++ b/static/styles/4-layout/_gallery.scss
@@ -118,3 +118,9 @@
         width: 100%;
     }
 }
+
+.pagination {
+    @include flex(center, center, row);
+    font-size: 1.4rem;
+    margin-top: 1rem;
+}
