--- a/templates/gallery/home.html
+++ b/templates/gallery/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <section>
-    <h2 class="gallery_title">Our games</h2>
+    <h2 class="gallery_title">Community screenshots</h2>
     <div class="img_gallery">
         {% for img in imgs %}
         <div class="container_screenshot">
@@ -17,23 +17,7 @@
         </div>
         {% endfor %}
 
-        <div class="pagination">
-            <span class="step-links">
-                {% if imgs.has_previous %}
-                <a href="?page=1">&laquo; first</a>
-                <a href="?page={{ imgs.previous_page_number }}">previous</a>
-                {% endif %}
 
-                <span class="current">
-                    Page {{ imgs.number }} of {{ imgs.paginator.num_pages }}.
-                </span>
-
-                {% if imgs.has_next %}
-                <a href="?page={{ imgs.next_page_number }}">next</a>
-                <a href="?page={{ imgs.paginator.num_pages }}">last &raquo;</a>
-                {% endif %}
-            </span>
-        </div>
 
     </div>
     <div id="myModal"
@@ -48,6 +32,24 @@
 
     </div>
 </section>
+
+<div class="pagination">
+    <span class="step-links">
+        {% if imgs.has_previous %}
+        <a href="?page=1">&laquo; first</a>
+        <a href="?page={{ imgs.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ imgs.number }} of {{ imgs.paginator.num_pages }}.
+        </span>
+
+        {% if imgs.has_next %}
+        <a href="?page={{ imgs.next_page_number }}">next</a>
+        <a href="?page={{ imgs.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 {% endblock content %}
 
 {% block scripts %}
