--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -2,18 +2,18 @@
 
 {% block content %}
 <div id="registro"
-     class="container">
-    <h1 class="display">Login</h1><br>
+     class="form-work-with-us">
+
     <form method="POST"
           id="formulario">
         {% csrf_token %}
-
+        <h2>Login </h2>
         <div class="form-group">
-            <label for="username">Nombre de Usuario</label><br>
+            <label for="username">Username</label><br>
             <input name="username"
                    class="form-control"
                    type="text" />
-            <div class="bg-danger mt-1">{{ form.errors.username }}</div>
+            <div>{{ form.errors.username }}</div>
         </div>
 
         <div class="form-group">
@@ -21,22 +21,21 @@
             <input name="password"
                    class="form-control"
                    type="password" />
-            <div class="bg-danger mt-1">{{ form.errors.password }}</div>
+            <div>{{ form.errors.password }}</div>
         </div>
 
         {% if form.non_field_errors %}
         <div class="form-group">
-            <div class="bg-danger mt-1 p-2">Login incorrecto!</div>
+            <div>Please correct your inputs</div>
         </div>
         {% endif %}
 
         {{form.non_field_errors}}
 
-        <div class="form-group">
-            <input class="btn"
-                   type="submit"
-                   value="Enviar" />
-        </div>
+
+        <button class="btn"
+                type="submit">LOGIN</button>
+
 
     </form>
 </div>
