--- a/static/styles/main.scss
+++ b/static/styles/main.scss
@@ -15,5 +15,6 @@
 @import '4-layout/social';
 @import '4-layout/looking-for-form';
 @import '4-layout/gallery';
+@import '4-layout/post';
 
 @import '5-pages/home';
