fix: post detail better styling

--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -3,8 +3,12 @@
 
 {% block content %}
 <div class='post'>
-        <div class='post__title'> {{ post.title}}</div>
-        <div class='post__author'> {{ post.author}}</div>
+        <div class='post__cover'>
+                <img src="{{ post.cover.url}}"
+                     alt="">
+        </div>
+        <h2 class='post__title'> {{ post.title}}</h2>
+        <h3 class='post__author'> {{ post.author}}</h3>
         <div class='post__body'> {{ post.body|safe}}</div>
 
 
