--- a/static/styles/4-layout/_post.scss
+++ b/static/styles/4-layout/_post.scss
@@ -7,4 +7,28 @@
         max-width: 100%;
         height: auto;
     }
+
+    overflow: hidden;
+    &__cover {
+        height: 20rem;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: 50% 50%;
+        }
+    }
+    &__title {
+        margin: 1rem 0rem;
+        @include flex(center, center, row);
+    }
+    &__author {
+        margin: 1rem 0rem;
+        @include flex(center, center, row);
+    }
+    &__body {
+        img {
+            margin: 1.5rem;
+        }
+    }
 }
