--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -3,7 +3,38 @@
 
 {% block content %}
 
-<div style='height:200vh;'>Home</div>
+{% for post in object_list %}
+
+<img src={{post.cover.url}}
+     alt=""></img>
+<div>{{post.category}}</div>
+<div>{{post.title}}</div>
+<div>{{post.author}}</div>
+<div>{{ post.body|safe|striptags|truncatechars_html:"500" }}</div>
+<div>{{post.upload_date}}</div>
+
+{% endfor %}
+
+<div class="pagination">
+        <span class="step-links">
+                {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                {% endif %}
+
+                <span class="current">
+                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                </span>
+
+                {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+        </span>
+</div>
+
+
+
 <section class="social">
         <div class="social__subscribe">
                 <h2>In the know</h2>
