--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -2,20 +2,28 @@
 {% load static %}
 
 {% block content %}
+<div class="post_container">
+        {% for post in object_list %}
 
-{% for post in object_list %}
+        <div class='post_summary'>
+                <div style="background-image: url({{post.cover.url}})"
+                     class='post_summary__cover'>
 
-<img src={{post.cover.url}}
-     alt=""></img>
-<div>{{post.category}}</div>
-<div>{{post.title}}</div>
-<div>{{post.author}}</div>
-<div>{{ post.body|safe|striptags|truncatechars_html:"500" }}</div>
-<div>{{post.upload_date}}</div>
+                </div>
+                <div class='post_summary__content'>
+                        <div>{{post.category}}</div>
+                        <div>{{post.title}}</div>
+                        <div>{{post.author}}</div>
+                        <p>{{ post.body|safe|striptags|truncatechars_html:"150" }}</p>
+                        <div>{{post.upload_date}}</div>
+                        <div class="post_read_more"><a href="{% url 'blog-post-detail' post.id %}">Read more...</a>
+                        </div>
+                </div>
+        </div>
 
-{% endfor %}
-
-<div class="pagination">
+        {% endfor %}
+</div>
+<div class="blog_pagination">
         <span class="step-links">
                 {% if page_obj.has_previous %}
                 <a href="?page=1">&laquo; first</a>
