--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -53,7 +53,7 @@
 
                     </li>
                     {% if not user.is_authenticated %}
-                    <li><a href="#">Register</a></li>
+                    <li><a href="{% url 'register_user' %}">Register</a></li>
                     <li><a href="{% url 'login' %}">Login</a></li>
                     {% endif %}
                 </ul>
