--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -46,15 +46,15 @@
                     <li><a href="#">Press kits</a></li>
                     <li><a href="#">Merch</a></li>
 
-                    <li>
-
-                        <a href="#"
-                           target="_blank"> {{ user.username }} </a>
-
-                    </li>
                     {% if not user.is_authenticated %}
                     <li><a href="{% url 'register_user' %}">Register</a></li>
                     <li><a href="{% url 'login' %}">Login</a></li>
+                    {% else %}
+
+                    <li><a href="{% url 'blog-profile-detail' user.id %}"> {{ user.username }} </a> </li>
+                    <li><a href="{% url 'logout' %}"> Logout </a></li>
+
+
                     {% endif %}
                 </ul>
                 <div class="burger"><i class="fas fa-bars icono"></i></div>
