--- a/templates/user/list.html
+++ b/templates/user/list.html
@@ -1,16 +1,9 @@
-{% extends '../base/base.html' %}
-
-{% block content %}
-{% if object_list %}
-{% for user in object_list %}
+{% extends '../base/base.html' %} {% block content %} {% if object_list %} {%
+for user in object_list %}
 <p>Nombre: {{ user.username }}</p>
 <p>email: {{ user.email }}</p>
 
-<br>
-{% endfor %}
-
-{% else %}
+<br />
+{% endfor %} {% else %}
 <h1>No hay registros de user</h1>
-{% endif %}
-
-{% endblock content %}
+{% endif %} {% endblock content %}
