--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -1,8 +1,6 @@
-{% extends '../base/base.html' %}
-{% block content %}
+{% extends '../base/base.html' %} {% block content %}
 
 <div class="form-work-with-us">
-
     <form method="POST">
         <h2>Register form</h2>
         {% csrf_token %} {{ form}}
