--- a/templates/user/password-reset.html
+++ b/templates/user/password-reset.html
@@ -5,7 +5,7 @@
 <p>Enter your e-mail address to obtain a new password.</p>
 
 <form action="." method="post">
-    {{ form.as_p }}
+    {% csrf_token %} {{ form.as_p }}
 
     <p><input type="submit" value="Send e-mail" /></p>
 </form>
