--- a/templates/blog/post-search.html
+++ b/templates/blog/post-search.html
@@ -41,8 +41,8 @@
 <div class="blog_pagination">
         <span class="step-links">
                 {% if page_obj.has_previous %}
-                <a href="?page=1">&laquo; first</a>
-                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                <a href="{{ request.get_full_path }}&page=1">&laquo; first</a>
+                <a href="{{ request.get_full_path }}&page={{ page_obj.previous_page_number }}">previous</a>
                 {% endif %}
 
                 <span class="current">
@@ -50,8 +50,8 @@
                 </span>
 
                 {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}">next</a>
-                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                <a href="{{ request.get_full_path }}&page={{ page_obj.next_page_number }}">next</a>
+                <a href="{{ request.get_full_path }}&page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
                 {% endif %}
         </span>
 </div>
