--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -27,9 +27,8 @@
               href="{% static "./styles/main.css" %}">
         <link rel="icon"
               href="{% static "./img/logo.svg" %}">
-        {% block css %} {% endblock css %}
-
-
+        {% block css %}
+        {% endblock css %}
     </head>
 
     <body>
@@ -48,8 +47,13 @@
                     {% if not user.is_authenticated %}
                     <li><a href="{% url 'register_user' %}">Register</a></li>
                     <li><a href="{% url 'login' %}">Login</a></li>
-                    {% else %}
 
+                    {% else %}
+                    {% if user.is_staff %}
+                    <li>
+                        <a href="{% url 'blog-post-create' %}"> Create post </a>
+                    </li>
+                    {% endif %}
                     <li>
                         <a href="{% url 'blog-profile-detail' user.id %}">
                             {{ user.username }}
