fix: author profile linked from gallery post

--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -17,7 +17,7 @@
         {{ form.media }}
         {{ form.as_p }} 
         <button type="submit"
-                value="Submit">Editar</button>
+                value="Submit">Search now!</button>
 </form>
 
 
