--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -19,10 +19,22 @@
                 <div><a href="{% url 'blog-post-delete' post.id%}">Delete</a></div>
         {% endif %}
 
-        <div class='post__cover'>
+        
+                {% if post.cover %}
+
+                <div class='post__cover'>
                 <img src="{{ post.cover.url}}"
                      alt="">
         </div>
+                {% else %}
+                
+                <div class='post__cover'>
+                <img src="{% static "./img/logo.svg" %}"
+                     alt="">
+        </div>
+                {% endif %}
+
+
         <h2 class='post__title'> {{ post.title}}</h2>
         <h3 class='post__author'> <a href="{% url 'blog-profile-detail' post.author.id %}">{{post.author}}</a></h3>
         <div class='post__body'> {{ post.body|safe}}</div>
