--- a/templates/blog/profile-update.html
+++ b/templates/blog/profile-update.html
@@ -1,6 +1,6 @@
 {% extends '../base/base.html' %} {% block content %}
 
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     <h2>{{ object.user.username }} Profile</h2>
     {{ form.as_p }} {% csrf_token %}
     <p>
